...
        builder: (context, state) {
          if (state is SeriesLoading) {
            return const Center(
              child: CircularProgressIndicator(),
            );
          } else if (state is DetailHasData) {
            return ListView(key: const Key("scroll"), children: [
              Stack(
                children: [
                  CachedNetworkImage(
                    imageUrl:
                        GetSeriesDetail.posterImage(state.result.posterPath!),
                  ),
...
                                                  RoundedRectangleBorder(
                                                borderRadius:
                                                    BorderRadius.circular(18.0),
                                              ))),
                                          child: Text(
                                            result.status
                                                ? "Remove from Watchlist"
                                                : "Add to Watchlist",
                                            style:
                                                const TextStyle(fontSize: 18),
                                          ));
                                    } else {
                                      return ElevatedButton(
...
